--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -219,4 +219,7 @@ if(UA_ENABLE_PUBSUB)
             add_example(tutorial_pubsub_mqtt_publish pubsub/tutorial_pubsub_mqtt_publish.c)
         endif()
     endif()
+    if(UA_ENABLE_PUBSUB_FILE_CONFIG)
+        add_example(server_pubsub_file_configuration pubsub/server_pubsub_file_configuration.c)
+    endif()
 endif()
