--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -194,9 +194,9 @@ if(UA_ENABLE_PARSING)
     add_test_valgrind(types_parse ${TESTS_BINARY_DIR}/check_types_parse)
 endif()
 
-#add_executable(check_types_custom check_types_custom.c $<TARGET_OBJECTS:open62541-object> $<TARGET_OBJECTS:open62541-testplugins>)
-#target_link_libraries(check_types_custom ${LIBS})
-#add_test_valgrind(types_custom ${TESTS_BINARY_DIR}/check_types_custom)
+add_executable(check_types_custom check_types_custom.c $<TARGET_OBJECTS:open62541-object> $<TARGET_OBJECTS:open62541-testplugins>)
+target_link_libraries(check_types_custom ${LIBS})
+add_test_valgrind(types_custom ${TESTS_BINARY_DIR}/check_types_custom)
 
 add_executable(check_chunking check_chunking.c $<TARGET_OBJECTS:open62541-object> $<TARGET_OBJECTS:open62541-testplugins>)
 target_link_libraries(check_chunking ${LIBS})
