--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -377,6 +377,17 @@ if(UA_ENABLE_PUBSUB)
     target_link_libraries(check_pubsub_multiple_layer ${LIBS})
     add_test_valgrind(pubsub_multiple_layer ${TESTS_BINARY_DIR}/check_pubsub_multiple_layer)
 
+    if(UA_MULTITHREADING GREATER 100) 
+        # Note: we can't use testplugins because PubSub does not work with testing_networklayers
+        add_executable(check_pubsub_subscribe_msgrcvtimeout pubsub/check_pubsub_subscribe_msgrcvtimeout.c 
+            $<TARGET_OBJECTS:open62541-object>
+            $<TARGET_OBJECTS:open62541-plugins>)
+        # TODO: don't know why this POSIX definition isn't needed anywhere else ... ???
+        target_compile_definitions(check_pubsub_subscribe_msgrcvtimeout PUBLIC -D_POSIX_C_SOURCE=199309L)
+        target_link_libraries(check_pubsub_subscribe_msgrcvtimeout ${LIBS})
+        add_test_valgrind(check_pubsub_subscribe_msgrcvtimeout ${TESTS_BINARY_DIR}/check_pubsub_subscribe_msgrcvtimeout)
+    endif()
+
     if(UA_ENABLE_PUBSUB_ETH_UADP)
         if(NOT UA_ENABLE_PUBSUB_ETH_UADP_ETF)
             add_executable(check_pubsub_connection_ethernet pubsub/check_pubsub_connection_ethernet.c $<TARGET_OBJECTS:open62541-object> $<TARGET_OBJECTS:open62541-plugins>)
