--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -919,6 +919,14 @@ if(UA_ENABLE_PUBSUB)
         endif()
     endif()
 
+    if (UA_ENABLE_PUBSUB_AMQP)
+        list(APPEND default_plugin_sources ${PROJECT_SOURCE_DIR}/plugins/amqp/ua_pubsub_amqp.c)
+        list(APPEND default_plugin_sources ${PROJECT_SOURCE_DIR}/plugins/amqp/ua_amqp_adaptor.c)
+
+        list(APPEND default_plugin_headers ${PROJECT_SOURCE_DIR}/plugins/amqp/ua_pubsub_amqp.h)
+        list(APPEND default_plugin_headers ${PROJECT_SOURCE_DIR}/plugins/amqp/ua_amqp_adaptor.h)
+
+    endif()
 endif()
 
 if(UA_ENABLE_JSON_ENCODING)
@@ -1204,10 +1212,12 @@ else()
 
     add_library(open62541-plugins OBJECT ${default_plugin_sources} ${ua_architecture_sources} ${exported_headers})
     add_dependencies(open62541-plugins open62541-generator-types open62541-generator-transport open62541-generator-namespace)
+
     target_include_directories(open62541-plugins PRIVATE ${PROJECT_SOURCE_DIR}/plugins)
     target_include_directories(open62541-plugins PRIVATE ${PROJECT_BINARY_DIR}/src_generated)
     target_compile_definitions(open62541-plugins PRIVATE -DUA_DYNAMIC_LINKING_EXPORT)
     set_target_properties(open62541-plugins PROPERTIES FOLDER "open62541/lib")
+
 
     if(UA_PACK_DEBIAN)
         add_library(open62541-static STATIC $<TARGET_OBJECTS:open62541-object> $<TARGET_OBJECTS:open62541-plugins>)
