WIP ex(pubsub): add pubsub amqp publish example
Signed-off-by: Waheed Ejaz <waheed.ejaz@gmail.com>

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -219,4 +219,10 @@ if(UA_ENABLE_PUBSUB)
             add_example(tutorial_pubsub_mqtt_publish pubsub/tutorial_pubsub_mqtt_publish.c)
         endif()
     endif()
+    if(UA_ENABLE_PUBSUB_AMQP)
+        if(NOT WIN32)
+            include_directories(${PROJECT_SOURCE_DIR}/../plugins)
+            add_example(tutorial_pubsub_amqp_publish pubsub/tutorial_pubsub_amqp_publish.c)
+        endif()
+    endif()    
 endif()
