feat(pubsub): Integrating realtime pubsub examples into CMake
 - Time and pthread dependencies added to CMakeLists

Change-Id: I1bd7340131117f1049bcfae0818629d6bd3bf927

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -202,6 +202,17 @@ if(UA_ENABLE_PUBSUB)
 	add_example(server_pubsub_publisher_iop pubsub/server_pubsub_publisher_iop.c)
     add_example(server_pubsub_publish_rt_level pubsub/server_pubsub_publisher_rt_level.c)
     add_example(server_pubsub_rt_information_model pubsub/server_pubsub_rt_field_information_model.c)
+    if(CMAKE_SYSTEM MATCHES "Linux")
+        add_example(pubsub_interrupt_publish pubsub_realtime/pubsub_interrupt_publish.c)
+        target_sources(pubsub_interrupt_publish PRIVATE pubsub_realtime/bufmalloc.c)
+        target_link_libraries(pubsub_interrupt_publish rt)
+        if(UA_ENABLE_PUBSUB_ETH_UADP_ETF)
+            add_example(pubsub_TSN_publisher pubsub_realtime/pubsub_TSN_publisher.c)
+            add_example(pubsub_TSN_loopback pubsub_realtime/pubsub_TSN_loopback.c)
+            target_link_libraries(pubsub_TSN_publisher rt pthread)
+            target_link_libraries(pubsub_TSN_loopback rt pthread)
+        endif()
+    endif()
     if (BUILD_SHARED_LIBS)
         message(WARNING "PubSub subscriber API is not finished. Build option BUILD_SHARED_LIBS is not supported. Skipping PubSub subscriber examples.")
     else (NOT BUILD_SHARED_LIBS)
