--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -203,14 +203,10 @@ if(UA_ENABLE_PUBSUB)
     add_example(server_pubsub_publish_rt_level pubsub/server_pubsub_publisher_rt_level.c)
     add_example(server_pubsub_rt_information_model pubsub/server_pubsub_rt_field_information_model.c)
     if(CMAKE_SYSTEM MATCHES "Linux")
-        add_example(pubsub_interrupt_publish pubsub_realtime/pubsub_interrupt_publish.c)
-        target_sources(pubsub_interrupt_publish PRIVATE pubsub_realtime/bufmalloc.c)
-        target_link_libraries(pubsub_interrupt_publish rt)
-        if(UA_ENABLE_PUBSUB_ETH_UADP_ETF)
-            add_example(pubsub_TSN_publisher pubsub_realtime/pubsub_TSN_publisher.c)
-            add_example(pubsub_TSN_loopback pubsub_realtime/pubsub_TSN_loopback.c)
-            target_link_libraries(pubsub_TSN_publisher rt pthread)
-            target_link_libraries(pubsub_TSN_loopback rt pthread)
+        if(UA_ENABLE_PUBSUB_ETH_UADP AND UA_ENABLE_MALLOC_SINGLETON AND UA_ENABLE_IMMUTABLE_NODES)
+            add_example(rt_publisher pubsub_realtime/pubsub_interrupt_publish.c)
+            target_sources(rt_publisher PRIVATE pubsub_realtime/bufmalloc.c)
+            target_link_libraries(rt_publisher rt)
         endif()
     endif()
     if (BUILD_SHARED_LIBS)
@@ -222,6 +218,14 @@ if(UA_ENABLE_PUBSUB)
         else(NOT UA_ENABLE_AMALGAMATION)
             add_example(tutorial_pubsub_subscribe pubsub/tutorial_pubsub_subscribe.c)
             add_example(pubsub_subscribe_standalone pubsub/pubsub_subscribe_standalone.c)
+            if(CMAKE_SYSTEM MATCHES "Linux")
+                if(UA_ENABLE_PUBSUB_ETH_UADP_ETF)
+                    add_example(pubsub_TSN_publisher pubsub_realtime/pubsub_TSN_publisher.c)
+                    add_example(pubsub_TSN_loopback pubsub_realtime/pubsub_TSN_loopback.c)
+                    target_link_libraries(pubsub_TSN_publisher rt pthread)
+                    target_link_libraries(pubsub_TSN_loopback rt pthread)
+                endif()
+            endif()
         endif()
     endif()
     if(UA_ENABLE_PUBSUB_MQTT)
