try single threaded unit test

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -395,6 +395,12 @@ if(UA_ENABLE_PUBSUB)
     target_link_libraries(check_pubsub_multiple_layer ${LIBS})
     add_test_valgrind(pubsub_multiple_layer ${TESTS_BINARY_DIR}/check_pubsub_multiple_layer)
 
+    add_executable(check_pubsub_msgrcvtimeout pubsub/check_pubsub_msgrcvtimeout.c $<TARGET_OBJECTS:open62541-object> 
+        $<TARGET_OBJECTS:open62541-plugins>) # Note: testing-plugins do not work with pubsub
+    target_compile_definitions(check_pubsub_msgrcvtimeout PUBLIC -D_POSIX_C_SOURCE=199309L)
+    target_link_libraries(check_pubsub_msgrcvtimeout ${LIBS})
+    add_test_valgrind(check_pubsub_msgrcvtimeout ${TESTS_BINARY_DIR}/check_pubsub_msgrcvtimeout)
+
     if(UA_ENABLE_PUBSUB_ETH_UADP)
         if(NOT UA_ENABLE_PUBSUB_ETH_UADP_ETF)
             add_executable(check_pubsub_connection_ethernet pubsub/check_pubsub_connection_ethernet.c $<TARGET_OBJECTS:open62541-object> $<TARGET_OBJECTS:open62541-plugins>)
