feat(pubsub): monitoring (example DataSetReader MessageReceiveTimeout)
Added an optional feature to provide a general PubSub monitoring/timeout
handling backend. Build option UA_ENABLE_PUBSUB_MONITORING

The monitoring backend uses the server callback implementation per default.
An application can provide it's own monitoring/timer backend by setting the
monitoring callbacks in the server configuration.

The MessageReceiveTimeout handling of DataSetReaders is provided as an
monitoring example.
The timeout check starts after the DataSetReader has received the first message.
If there is no new message within the configured MessageReceiveTimeout the
DataSetReader state changes to error. An application can get a notification
about this timeout by providing a pubSubStateChangeCallback, which can be
configured at the server configuration.
When the DataSetReader receives a new message again, the state changes back to
operational.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -268,7 +268,9 @@ mark_as_advanced(UA_ENABLE_PUBSUB_INFORMATIONMODEL_METHODS)
 option(UA_ENABLE_PUBSUB_DELTAFRAMES "Enable sending of delta frames with only the changes" OFF)
 mark_as_advanced(UA_ENABLE_PUBSUB_DELTAFRAMES)
 option(UA_ENABLE_PUBSUB_FILE_CONFIG "Enable loading PubSub Config from file extension" OFF)
-mark_as_advanced(UA_ENABLE_PUBSUB_FILE_CONFIG) 
+mark_as_advanced(UA_ENABLE_PUBSUB_FILE_CONFIG)
+option(UA_ENABLE_PUBSUB_MONITORING "Enable monitoring of PubSub components (e.g. MessageReceiveTimeout)" OFF)
+mark_as_advanced(UA_ENABLE_PUBSUB_MONITORING)
 #RT and Transport PubSub settings
 option(UA_ENABLE_PUBSUB_ETH_UADP "Enable publish/subscribe UADP over Ethernet" OFF)
 mark_as_advanced(UA_ENABLE_PUBSUB_ETH_UADP)
@@ -307,6 +309,12 @@ endif()
 if(UA_ENABLE_PUBSUB_FILE_CONFIG)
     if(NOT UA_ENABLE_PUBSUB)
         message(FATAL_ERROR "PubSub needs to be enabled")
+    endif()
+endif()
+
+if(UA_ENABLE_PUBSUB_MONITORING)
+    if(NOT UA_ENABLE_PUBSUB)
+        message(FATAL_ERROR "PubSub monitoring cannot be used with PubSub function disabled")
     endif()
 endif()
 
