--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -238,4 +238,11 @@ if(UA_ENABLE_PUBSUB)
     if(UA_ENABLE_PUBSUB_FILE_CONFIG)
         add_example(server_pubsub_file_configuration pubsub/server_pubsub_file_configuration.c)
     endif()
+    if (UA_ENABLE_PUBSUB_MONITORING)
+        if(CMAKE_SYSTEM MATCHES "Linux")
+            add_example(server_pubsub_subscribe_custom_monitoring pubsub/monitoring/server_pubsub_subscribe_custom_monitoring.c)
+        else(NOT (CMAKE_SYSTEM MATCHES "Linux"))
+            message(WARNING "PubSub subscriber monitoring example build needs LINUX OS. Skip build.")
+        endif()
+    endif()
 endif()
