--- a/include/open62541/config.h.in
+++ b/include/open62541/config.h.in
@@ -67,6 +67,7 @@
 #define UA_VALGRIND_INTERACTIVE_INTERVAL ${UA_VALGRIND_INTERACTIVE_INTERVAL}
 #cmakedefine UA_GENERATED_NAMESPACE_ZERO
 #cmakedefine UA_GENERATED_NAMESPACE_ZERO_FULL
+#cmakedefine UA_ENABLE_PUBSUB_MONITORING
 
 #cmakedefine UA_PACK_DEBIAN
 
