Update submodule dependency on libmdnsd

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -684,8 +684,19 @@ configure_file(include/open62541/config.h.in ${PROJECT_BINARY_DIR}/src_generated
 configure_file(open62541.pc.in ${PROJECT_BINARY_DIR}/src_generated/open62541.pc @ONLY)
 
 if(UA_ENABLE_DISCOVERY_MULTICAST)
+  include(GenerateExportHeader)
     set(MDNSD_LOGLEVEL 300 CACHE STRING "Level at which logs shall be reported" FORCE)
-    configure_file("deps/mdnsd/libmdnsd/mdnsd_config.h.in" "${PROJECT_BINARY_DIR}/src_generated/mdnsd_config.h")
+    # create a "fake" empty library to generate the export header macros
+    add_library(libmdnsd ${PROJECT_SOURCE_DIR}/deps/mdnsd/libmdnsd/mdnsd.h)
+    set_property(TARGET libmdnsd PROPERTY LINKER_LANGUAGE CXX)
+    configure_file("deps/mdnsd/libmdnsd/mdnsd_config_extra.in"
+                   "${PROJECT_BINARY_DIR}/src_generated/mdnsd_config_extra")
+    file(READ "${PROJECT_BINARY_DIR}/src_generated/mdnsd_config_extra" MDNSD_CONFIG_EXTRA)
+    generate_export_header(libmdnsd
+      EXPORT_FILE_NAME "${PROJECT_BINARY_DIR}/src_generated/mdnsd_config.h"
+      BASE_NAME MDNSD
+      DEFINE_NO_DEPRECATED
+      CUSTOM_CONTENT_FROM_VARIABLE MDNSD_CONFIG_EXTRA)
 endif()
 
 set(exported_headers ${exported_headers}
