--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -220,6 +220,7 @@ if(UA_ENABLE_PUBSUB)
             add_example(pubsub_subscribe_standalone pubsub/pubsub_subscribe_standalone.c)
             if(CMAKE_SYSTEM MATCHES "Linux")
                 if(UA_ENABLE_PUBSUB_ETH_UADP_ETF)
+                    add_subdirectory(pubsub_realtime/nodeset)
                     add_example(pubsub_TSN_publisher pubsub_realtime/pubsub_TSN_publisher.c)
                     add_example(pubsub_TSN_loopback pubsub_realtime/pubsub_TSN_loopback.c)
                     target_link_libraries(pubsub_TSN_publisher rt pthread)
